# Anubuddhi

./: .env.example  .gitignore  ALIGNMENT_FIX.md  BEFORE_AFTER_DIAGRAMS.md  BGE_UPGRADE_SUMMARY.md  CHAT_INPUT_POSITION_FIX.md  CHAT_UI_ENHANCEMENT.md  CHAT_UX_FIX.md  COLUMN_ALIGNMENT_FIX.md  CONSOLE_ANALYSIS_GUIDE.md  CONTEXT_FIX.md  CONVERGENT_REFINEMENT.md  CONVERSATIONAL_DESIGN_SUMMARY.md  DEBUGGING_LAYOUT.md  DEEP_ANALYSIS_UPDATE.md  DUAL_MODE_CHAT_SYSTEM.md  DUAL_SIMULATION_SYSTEM.md  EXPERIMENT_TEST_SUITE.md  FEEDBACK_LOOP_ANALYSIS.md  FINAL_UI_LAYOUT.md  FIXED_CHAT_POSITIONING.md  GITHUB_SETUP.md  HTML_INSPECTOR_GUIDE.md  INSTANT_MEMORY_FIX.md  INTEGRATION_SUMMARY.md  ITERATIVE_REFINEMENT_FLOW.md  LLM_ROUTING_FIX.md  MEMORY_EXPERIENCE_GUIDE.md  MEMORY_FIX_SUMMARY.md  MEMORY_FLOW_EXPLAINED.md  MEMORY_IMPLEMENTATION_GUIDE.md  NO_TIMEOUT_DESIGN.md  NUCLEAR_SIMPLIFICATION.md  OPTICAL_COMPONENTS.md  OPTICAL_COMPONENTS_UPDATE.md  PAGE_HEIGHT_FIT_FIX.md  README.md  README.md.old  README_LAUNCH_GUIDE.md  ROADMAP.md  (+56 more)
.github/: copilot-instructions.md
Results_FreeSim/: analyze_freeform_results.py  extract_freeform_results.py  freeform_analysis_summary.json  freeform_experiments_summary.json  freeform_results_for_paper.csv
Results_FreeSim/4-photon_boson_sampling_experiment_freeform_2025-11-28_19-26-09/: 01_freeform_simulation.py  03_simulation_report.md  04_analysis_results.json  05_metrics_summary.md  06_design_specification.json  README.md
Results_FreeSim/bb84_quantum_key_distribution_system_freeform_2025-11-28_18-56-03/: 01_freeform_simulation.py  03_simulation_report.md  04_analysis_results.json  05_metrics_summary.md  06_design_specification.json  README.md
Results_FreeSim/bell_state_generator_using_spontaneous_parametric_down-conversion_freeform_2025-11-28_15-23-40/: 01_freeform_simulation.py  03_simulation_report.md  04_analysis_results.json  05_metrics_summary.md  06_design_specification.json  README.md
Results_QuTiP/: ANALYSIS_NARRATIVE.md  analysis_summary.py  experiments_summary.json
docs/: UI_IMPROVEMENTS_SUMMARY.md  WEB_SEARCH_INTEGRATION.md
examples/: complete_workflow_demo.py
scripts/: check_double_slit.py  check_hom.py  check_right_angles.py  test_beam_split.py  test_designer.py  test_hom.py  test_michelson.py  test_multi_path.py  test_renderer.py  validate_optics.py  verify_integration.py  view_angles.py
toolbox/: custom_components.json  learned_composites.json  primitives.json  simulation_toolbox.json
(+199 files in other folders)
