[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-quantum"
version = "0.1.0"
description = "An LLM-based agentic AI system for designing quantum experiments"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "AgenticQuantum", email = "contact@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["quantum", "physics", "ai", "machine-learning", "optimization"]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.4.0",
    "qutip>=4.7.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "asyncio-mqtt>=0.11.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
    "plotly>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=12.0",
    "redis>=5.0.0",
    "alembic>=1.10.0",
    "sqlalchemy>=2.0.0",
    "celery>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/AgenticQuantum/Agentic"
Repository = "https://github.com/AgenticQuantum/Agentic"
Documentation = "https://github.com/AgenticQuantum/Agentic"
"Bug Tracker" = "https://github.com/AgenticQuantum/Agentic/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
